--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  get_it: ^7.2.0
+  injectable: ^2.0.1
 
 dev_dependencies:
+  build_runner: ^2.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
