--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   get_it: ^7.2.0
   injectable: ^2.0.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   build_runner: ^2.3.2
